5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1593_1801.log
== TEST (2019-03-28 10:34:54) 
-- CODE:
c = ("nome do objeto:")
d = (" abra ")
e = (" ")
eq= c + d + e

eq1 = (eq) * 4
print(eq1)
-- OUTPUT:
nome do objeto: abra  nome do objeto: abra  nome do objeto: abra  nome do objeto: abra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:35:46) 
-- CODE:
c = input("Nome do objeto:")
d = (" abra ")
e = (" ")
eq= c + d + e

eq1 = (eq) * 4
print(eq1)
-- OUTPUT:
livro abra  livro abra  livro abra  livro abra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:36:10) 
-- CODE:
c = input("Nome do objeto:")
d = (" abra ")
e = (" ")
eq= d +c + e

eq1 = (eq) * 4
print(eq1)
-- OUTPUT:
abra livro  abra livro  abra livro  abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:36:35) 
-- CODE:
c = input("Nome do objeto:")
d = (" Abra ")
e = (" ")
eq= d +c + e

eq1 = (eq) * 4
print(eq1)
-- EXECUTION TIME:
0.11749
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro  Abra livro  Abra livro  Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro  Abra carro  Abra carro  Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa  Abra caixa  Abra caixa  Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:36:39) 
-- CODE:
c = input("Nome do objeto:")
d = (" Abra ")
e = (" ")
eq= d +c + e

eq1 = (eq) * 4
print(eq1)
-- OUTPUT:
Abra livro  Abra livro  Abra livro  Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:43:56) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:")
print(d *("Abra" + c + " "))
-- EXECUTION TIME:
0.140691
-- ERROR:
  File "/home/codebench/codes/1593/1801/main.py", line 3
    print(d *("Abra" + c + " "))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:44:24) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:"))
print(d *("Abra" + c + " "))
-- EXECUTION TIME:
0.151291
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:41) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:"))
print(d *("Abra" + c + " "))
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:11) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:"))
print(d *("Abra" + c + "  "))
-- OUTPUT:
Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:46:27) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:"))
print(d * ("Abra" + c + "  "))
-- OUTPUT:
Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro  Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:47:11) 
-- CODE:
c = input("Nome do objeto:")
d = int(input("Digite o numero de repeticao:"))
print(d * ("Abra " + c + " "))
-- EXECUTION TIME:
0.191153
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
